--- a/web-landing-page/css/style.css
+++ b/web-landing-page/css/style.css
@@ -27,40 +27,41 @@ body {
   background-color: var(--color-bg) !important;
   color: var(--color-text) !important;
   transition: background-color 0.3s, color 0.3s !important;
+  width: 100%;
 }
 h1 {
   color: var(--color-h1) !important;
+  font-size: 1.25em !important;
 }
 
-header {
-  padding: 1em;
-  border-bottom: 2px solid var(--color-principal);
-  margin-bottom: 1em;
+.logo-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: row;  
 }
 
-header a {
+.logo-container a {
   font-size: 3em;
   color: var(--color-text) !important;
   text-decoration: none;
+  margin-bottom: 0.3em;
+  margin-right: 0.5em;
 }
-header a:hover {
+.logo-container a:hover {
   cursor: pointer;
 }
 
 .logo-container {
   width: auto;
-  height: 5em;
+  height: 7em;
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 .logo-container img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 7%;
   margin-right: 1em;
 }
 
@@ -72,6 +73,10 @@ main {
 
 .mensaje {
   text-align: center;
+}
+h2 {
+  font-size: 1.5em !important;
+  width: 100%;
 }
 
 .imagenes {
@@ -173,9 +178,9 @@ p {
   font-size: 1.3em;
   color: var(--color-parrafo);
 }
-footer {
+.clear{
   padding: 1em;
-  background-color: var(--color-principal);
   text-align: center;
   color: var(--color-bg);
+  width: 100%;
 }
