--- a/web/css/style.css
+++ b/web/css/style.css
@@ -24,7 +24,7 @@
   --color-formulario: #56a64d;
   --color-parrafo: #ffffff;
   /* Fondo más oscuro para destacar letras blancas */
-  --bg-formulario: rgba(80, 80, 80, 0.3) url("../img/web/landing12.jpg");
+  --bg-formulario: rgba(80, 80, 80, 0.3) url("../img/landing12.jpg");
 }
 
 body {
