cambio css estilos boceto

--- a/web/documentacion/estiloBoceto.css
+++ b/web/documentacion/estiloBoceto.css
@@ -78,6 +78,9 @@ p {
     justify-content: center;
     width: 100%;
 }
+.wireframe-movil-final img{
+       width: 60%;
+}
 .wireframe-movil img {
     width: 60%;
 }
