--- a/web/Formulario/assets/css/style.css
+++ b/web/Formulario/assets/css/style.css
@@ -144,7 +144,7 @@ label {
 
 .radio-group label {
     display: flex;
-    align-items: center;
+    align-items: end;
     gap: 6px; /* espacio entre radio y texto */
     cursor: pointer;
     margin: 0;
@@ -163,12 +163,11 @@ label {
     flex-direction: column;
     align-items: flex-start; /* todo a la izquierda */
     margin-top: 15px;
-    gap: 12px;
 }
 
 .form-check-label {
     display: flex;
-    align-items: center;      /* centra verticalmente */
+    align-items: end;      /* centra verticalmente */
     gap: 10px;               /* espacio checkbox-texto */
     cursor: pointer;
     font-size: 14px;
@@ -178,11 +177,9 @@ label {
 }
 
 .form-check-input {
+    align-items: center;
     margin: 0;
     padding: 0;
-    flex-shrink: 0;          /* evita que se encoja */
-    width: 16px;
-    height: 16px;
     cursor: pointer;
 }
 
