cambiados los colores del login

--- a/web/Formulario/assets/css/style.css
+++ b/web/Formulario/assets/css/style.css
@@ -190,7 +190,7 @@ label {
     margin-top: 40px;
     border: none;
     font-size: 14px;
-    background: #46A2FD;
+    background: #2f9e44;
     color: white;
     cursor: pointer;
     outline: none;
